samples/_failures_safe/1761634895_e0a671_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_810ec642.c: In function ‘main’:
./samples/SAFE/__tmp_810ec642.c:134:5: error: expected expression at end of input
  134 |     if (len >
      |     ^~
./samples/SAFE/__tmp_810ec642.c:134:5: error: expected declaration or statement at end of input
